# Zhiyv-3.0

开发中/: .env.example  .gitignore  IMPLEMENTATION.md  QUICKSTART.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run.py  start-dev.bat  start-dev.ps1  「知域」校园互动社交微信小程序 完整产品需求文档.md
开发中/.kiro/hooks/: chinese.kiro.hook
开发中/alembic/: README  env.py
开发中/alembic/versions/: 001_create_user_tables.py  002_create_secondhand_tables.py  002_create_sensitive_words_table.py  003_create_favorites_and_alerts_tables.py  003_create_reports_table.py  004_create_circles_and_schools_tables.py
开发中/app/: __init__.py  main.py
开发中/app/cli/: database.py
开发中/app/core/: __init__.py  config.py  database.py  dependencies.py  exception_handlers.py  exceptions.py  logging.py  middleware.py  permissions.py  response.py  security.py
开发中/app/models/: __init__.py  circle.py  course.py  post.py  report.py  secondhand.py  sensitive_word.py  user.py
开发中/app/repositories/: __init__.py  course.py  post.py  report.py  secondhand.py  sensitive_word.py  user.py
开发中/app/schemas/: audit.py  course.py  im.py  post.py  report.py  secondhand.py  sensitive_word.py  user.py
开发中/app/services/: __init__.py  auth.py  content_audit.py  (+8 more)
开发中/docs/: PROJECT_STATUS.md  api-preview.md  authentication.md  circles-and-social-module.md  content-security-module.md  database-setup.md  getting-started.md  sensitive-word-module.md
开发中/miniprogram/: app.json  app.wxss  project.config.json  project.private.config.json
开发中/tests/: conftest.py  test_database.py  test_main.py
(+100 files in other folders)
